# Kobold

./: .gitignore  Dockerfile  LICENSE.md  Makefile  project.json
.github/workflows/: makefile.yml  riscv_build.yml  x86_64_build.yml
KoboldKernel/: Cargo.toml  logo.bmap
KoboldKernel/src/: allocator.rs  framebuffer.rs  hart.rs  main.rs
KoboldKernel/src/hal/: mod.rs
KoboldKernel/src/hal/x86_64/: gdt.rs  mod.rs
KoboldKernel/src/scheme/: mod.rs
KoboldKernel/targets/: x86_64-pc.json  x86_64-pc.ld
boot/x86_64/: limine.conf
docs/: bootstrap.md
flanterm/backends/: fb.c
kernel/: Cargo.toml  project.json
kernel/meta/targets/: kobold-x86_64.json  kobold-x86_64.ld
kernel/src/: core.h  main.rs  mainfest.json
kernel/src/HAL/: HALMain.cpp  HALMain.h  manifest.json
kernel/src/HAL-x86_64/: ArchMain.h
kernel/src/hal/: gfx.rs  mod.rs
kernel/src/hal/arm64/: mod.rs
kernel/src/hal/x86_64/: mod.rs
kobold/: Makefile  build.zig
kobold/arch/: IArchitecture.hpp
kobold/dtb/: LICENSE
kobold/general/: Bootstrap.cpp  Common.hpp  Hart.hpp  Lock.cpp  Lock.hpp  Logging.cpp  Logging.hpp  Memory.cpp  Memory.hpp
kobold/hal/: alarmqueue.zig  dtb_parser.zig  hal.zig  hart.zig  memmodel.zig
kobold/kernel/: area.zig  elf.zig  eventqueue.zig  main.zig  pfn.zig  physmem.zig  port.zig  scheduler.zig  semaphore.zig  spinlock.zig  team.zig  thread.zig  vfs.zig
kobold/links/: riscv64.ld
kobold/perLib/: fs.zig  perlib.zig  spinlock.zig
kobold/wren/: COPYRIGHT  LICENSE  main.zig  needed_stdlib_symbols.txt  wren.h  (+13 more)
scripts/: appendPersonalities.py  generateDebugFile.py
(+54 files in other folders)
