[package]
name = "kernel"
version = "0.1.0"
edition = "2024"
license = "LGPL-3.0"

[dependencies]
safe_wren = "*"

[dependencies.spin]
version = "0.10"
default-features = false
features = ["once", "mutex", "rwlock", "use_ticket_mutex"]

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = { version = "0.15", features = ["nightly"] }
raw-cpuid = "11.5"
